# mf_backtest

./: .gitignore  DATA_EXPLORER_GUIDE.md  README.md  data_explorer.py  main.py  pyproject.toml  requirements.txt  run.py  simple_data_explorer.py
.github/: copilot-instructions.md
backend/: app.py
backend/api/: routes.py
backend/backtest/: engine.py  metrics.py  strategies.py
backend/data/: amfi_fetcher.py  data_validator.py  enhanced_fetcher.py  fetcher.py  fund_registry.py  index_fetcher.py  store.py  volatility_fetcher.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js  charts.js  dataExplorer.js  utils.js
scripts/: explore_data.py  explore_db.sh  seed_data.py  seed_enhanced_data.py  sqlite_learn.sh
static/css/: explorer.css
static/js/: explorer.js
templates/: data_explorer.html
